1999-08-25  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Add support for -resume

1999-06-26  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* oracdisp (reflect_defn): Make generic rather than hard-wiring the key
 	name. 

1999-05-11  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Use ORAC::Frame::IRCAM for IRCAM

1999-04-22  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Add -verbose for -quiet. 'use diagnostics' if -verbose
	and -warn
	Fix -batch option for use strict

1999-04-21  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Fix -w errors. Add -warn.

1999-04-20  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Pass %Mon to orac_process_recipe
	Add 'use strict'

1999-02-17  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Set the $Batch variable in ORAC::Basic

1998-09-24  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Document -loop flag option
	Remove data processing routines to ORAC::Core and add -batch

1998-09-17  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Set correct loop defaults when just using -to or no
	range options at all.

1998-09-16  Tim Jenness  <timj@jach.hawaii.edu>

	* oracdr: Set correct default for loop when using -from option.
	Use array references for recipe parsing

1998-02-25  Frossie  <frossie@jach.hawaii.edu>

	* oracdr: introduced Getopt for option handling
