@@ -225,6 +225,8 @@ Options:
   -warn      Turn on warning messages (perl -w). This should be used
              for debugging only. If -verbose is also true then full
              diagnostics are turned on (see 'perldoc diagnostics')
+  -beep      Make as much noise as possible over errors and pipeline
+             exit. (default is no beep)
   |;
 exit;
 }
@@ -490,7 +492,11 @@ unless ($opt_noeng) {
 
 }
 
-
+# Beeping
+if ($opt_beep) {
+  $ORAC::Basic::Beep = 1;
+  $orac_prt->errbeep(1);
+}
 
 ######################## I N I T  D I S P L A Y #############################
 #
@@ -811,6 +817,9 @@ if (defined $MW) {
 #------------------------------------------------------------------------
 
 # $Log$
+# Revision 1.69  1999/09/15 20:42:39  timj
+# Add support for beeping on exit and error messages
+#
 # Revision 1.68  1999/09/15 02:54:29  frossie
 # add beep nobeep
 #
