@@ -1,3 +1,9 @@
+1999-09-14  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Print.pm (err): Allow beeping with orac_err
+
+	* Basic.pm: Add $Beep global variable
+
 1999-09-13  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Display/GAIA.pm (send_to_gaia): Change zautoscale to 95%
