@@ -1,3 +1,7 @@
+1999-09-14  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* oracdr: Turn on -beep option
+
 1999-08-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* oracdr: Add support for -resume
